# matrix-ircd

./: Cargo.toml
src/: error.rs  main.rs  matrix_client.rs
