[package]
name = "matrix-irc"
version = "0.1.0"
authors = ["Gus Caplan <me@gus.host>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
irc = { git = "https://github.com/aatxe/irc", branch = "develop" }
tokio-util = { version = "0.2", features = ["full"] }
futures = "0.3"
hyper = "0.13"
hyper-tls = "0.4"
ruma-api = "0.13"
ruma-client-api = "0.6"
http = "0.2"
url = "2.1"
tide = "0.6.0"
serde = "1.0.104"
